--- a/resgenEx.csproj
+++ b/resgenEx.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{D225096F-4908-436C-972A-5E3269285BC8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>resgen</RootNamespace>
+    <RootNamespace>resgenEx</RootNamespace>
     <AssemblyName>resgenEx</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -46,9 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentOptions.cs" />
     <Compile Include="Consts.cs" />
+    <Compile Include="FileFormats\PoResourceReader.cs" />
+    <Compile Include="FileFormats\PoResourceWriter.cs" />
+    <Compile Include="FileFormats\TxtResourceReader.cs" />
+    <Compile Include="FileFormats\TxtResourceWriter.cs" />
     <Compile Include="monoresgen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
