--- a/resgenEx.csproj
+++ b/resgenEx.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CommentOptions.cs" />
     <Compile Include="Consts.cs" />
+    <Compile Include="FileFormats\PoItem.cs" />
     <Compile Include="FileFormats\PoResourceReader.cs" />
     <Compile Include="FileFormats\PoResourceWriter.cs" />
     <Compile Include="FileFormats\TxtResourceReader.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="monoresgen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceInfo.cs" />
+    <Compile Include="ResourceItem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
