--- a/resgenEx.csproj
+++ b/resgenEx.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
+    <Compile Include="FileFormats\EncoderUtils.cs" />
+    <Compile Include="FileFormats\IResourceHeader.cs" />
     <Compile Include="FileFormats\islResourceReader.cs" />
     <Compile Include="FileFormats\islResourceWriter.cs" />
     <Compile Include="FileFormats\PoItem.cs" />
